# wishing-room

./: .gitignore  Cargo.toml  LICENSE  TASK.csv  clippy.toml  deny.toml  justfile  readme.md  readme_zh-hans.md  tokei_check.sh
.cargo/: audit.toml  config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: ci.yml  release-plz.yml  release.yml  update-deps.yml
apps/taled-editor/: Cargo.toml  Dioxus.toml
apps/taled-editor/android/: MainActivity.kt  main_activity_inject.java
apps/taled-editor/src/: app.rs  app_state.rs  canvas.rs  canvas_objects.rs  canvas_overlay.rs  edit_ops.rs  embedded_samples.rs  icons.rs  l10n.rs  logging.rs  main.rs  mobile_review.rs  mobile_review_styles.rs  obj_ops.rs  platform.rs  screens.rs  selection_ops.rs  selection_transform.rs  session_ops.rs  styles.rs  system_font.rs  theme.rs  thumbnails.rs  touch_ops.rs  ui.rs  ui_canvas.rs  ui_inspector.rs  ui_visuals.rs  utdr_download.rs  utdr_index.rs  utdr_thumbs.rs  workspace.rs
apps/taled-editor/src/screens/: about.rs  assets_browser.rs  dashboard.rs  dashboard_import.rs  dashboard_ws_dialog.rs  editor.rs  editor_controls.rs  editor_obj_panel.rs  editor_toolbar.rs  layer_dialogs.rs  layers.rs  objects.rs  properties.rs  save_dialog.rs  settings.rs  themes.rs  tile_palette.rs  tilesets.rs  widgets.rs
apps/wishing-editor/src/: app.rs  app_state.rs  demo.rs  embedded_samples.rs  main.rs  mobile_review.rs  mobile_review_styles.rs  platform.rs  session_ops.rs  styles.rs  ui_canvas.rs  ui_visuals.rs
assets/: utdr_index.json
assets/i18n/: en-US.ftl  zh-Hans.ftl
assets/samples/collection-of-images/: map.tmx
assets/samples/embedded-basic/: map.tmx
assets/samples/ruins/: ruins.tsx  ruins_2.tmx  ruins_3.tmx  ruins_objects.tsx
assets/samples/test_obj/: asset.tsx  test.tmx
crates/taled-core/: Cargo.toml
crates/taled-core/src/: error.rs  lib.rs  model.rs  session.rs  tmx.rs
crates/taled-core/src/tmx/: load.rs  save.rs
crates/taled-core/src/tmx/load/: convert.rs  prepare.rs  support.rs
crates/taled-core/tests/: stage1.rs
scripts/: patch_android_icons.py  perf_check.sh  perf_probe.spec.js  render_real_dashboard_thumbs.py  ssh-preview.sh  ui_capture_review.js  ui_compare.py  ui_compare.sh  ui_similarity.py
workspaces/builtin/stage1-basic/: map.tmx  terrain.tsx
