[workspace]
members = ["apps/taled-editor", "crates/taled-core"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.1"

[workspace.dependencies]
base64 = "0.22.1"
dioxus = { version = "0.7.3", default-features = false }
futures-timer = "3.0.3"
quick-xml = "0.38.4"
roxmltree = "0.20.0"
thiserror = "2.0.17"
tiled = "0.15.0"
