[package]
name = "taled-editor"
version = "0.0.1"
edition = "2024"

[dependencies]
fluent-bundle.workspace = true
ply-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
sys-locale.workspace = true
taled-core = { path = "../../crates/taled-core" }
unic-langid.workspace = true
