[package]
name = "taled-core"
version = "0.0.1"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Bli-AIk/taled"
homepage = "https://github.com/Bli-AIk/taled"
description = "Core library for Taled, a tile map editor for Ply engine."
documentation = "https://docs.rs/taled-core"
readme = "../../readme.md"
keywords = ["tile-map", "tmx", "editor", "ply"]
categories = ["game-development", "game-engines"]

[dependencies]
base64.workspace = true
quick-xml.workspace = true
roxmltree.workspace = true
thiserror.workspace = true
tiled = { workspace = true, features = ["wasm"] }
